--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 *
     {
     padding: 0;
+    scroll-behavior: smooth;
 }
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+
 }
 
 h1 {
